examples/test/testpolicy19567.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19567
  namespace: namespace234
spec:
  podSelector:
    matchLabels:
      key48: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value27
          key9: value27
          key19: value18
      podSelector:
        matchLabels:
          key37: value24
